--- a/style.css
+++ b/style.css
@@ -1,18 +1,24 @@
-.calculadora {
-    width: 50%;
-    margin: 100px auto;
-    border: 1px solid red;
+body {
     background: black;
+}
+
+.calculadora {
+    width: 25%;
+    padding: 20px;
+    margin: 100px auto;
+    border: 1px solid black;
+    border-radius: 1em;
+    background: #191970;
 }
 
 .numeros {
     width: 24%;
     display: inline-block;
-    margin-left: 0.5%;
-    margin-top: 0.5%;
+    margin-left: 0.2%;
+    margin-top: 3%;
     font-size: 3em;
-    border: 1px solid red;
-    border-radius: 0.2em;
+    border: 1px solid white;
+    border-radius: 3em;
     text-align: center;
     background: black;
     color: white;
@@ -26,14 +32,14 @@
 .operadores {
     width: 24%;
     display: inline-block;
-    margin-left: 0.5%;
-    margin-top: 0.5%;
+    margin-left: 0.2%;
+    margin-top: 3%;
     font-size: 3em;
-    border: 1px solid red;
-    border-radius: 0.2em;
+    border: 1px solid white;
+    border-radius: 3em;
     text-align: center;
-    background: black;
-    color: white;
+    background: #C0C0C0;
+    color: black;
 }
 
 .operadores:active {
@@ -41,14 +47,18 @@
     color: black;
 }
 
+.funcoes.igualdade {
+    background: blue;
+}
+
 .funcoes {
     width: 24%;
     display: inline-block;
-    margin-left: 0.5%;
-    margin-top: 0.5%;
+    margin-left: 0.2%;
+    margin-top: 3%;
     font-size: 3em;
-    border: 1px solid red;
-    border-radius: 0.2em;
+    border: 1px solid white;
+    border-radius: 3em;
     text-align: center;
     background: black;
     color: white;
@@ -64,43 +74,54 @@
     margin: 0.5%;
     padding-top: 0.5em;
     padding-bottom: 0.5em;
-    border: 1px solid red;
-    border-radius: 0.2em;
+    border: 1px solid white;
+    border-radius: 3em;
     font-size: 3em;
     text-align: center;
-    color: white;
+    background: white;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+button:hover {
+    background: grey;
 }
 
 @media screen and (max-width: 480px) {
     body {
-        background: black;
+        background:#191970;
     }
     .calculadora {
-        width: 98%;
-        margin: 100px auto;
+        width: 95%;
+        margin: 20px auto;
+        padding: 0;
         border: 0;
     }
     .numeros {
         font-size: 2em;
         width: 23%;
-        margin-left: 1%;
+        margin-left: 0.5%;
+        margin-right: 0.5%;
         margin-top: 5%;
         padding: 10% 0 10% 0;
     }
     .operadores {
         font-size: 2em;
         width: 23%;
+        margin-left: 0.5%;
+        margin-right: 0.5%;
         padding: 10% 0 10% 0;
     }
     .funcoes {
         font-size: 2em;
         width: 23%;
-        margin-left: 1%;
+        margin-left: 0.5%;
+        margin-right: 0.5%;
         margin-top: 5%;
         padding: 10% 0 10% 0;
     }
     .resposta {
-        font-size: 2em;
+        font-size: 3em;
         margin-top: 5%;
     }
 }
